--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+server.port=9001
+jwt.secret=secretstring
+spring.datasource.url=jdbc:postgresql://localhost:5432/robinhood
+spring.datasource.password=robinhoodAseca
+spring.datasource.username=robinhood
