--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,11 @@ dependencies {
     implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
 	testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
 	testImplementation group: 'junit', name: 'junit', version: '4.12'
+	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.0.2'
+	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+	implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
+	implementation group: 'com.yahoofinance-api', name: 'YahooFinanceAPI', version: '3.15.0'
 }
 
 test {
