--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     hibernate:
       ddl-auto: update
     database: postgresql
-    show-sql: true
+    show-sql: false
     generate-ddl: true
 
   datasource:
