--- a/src/main/resources/application-mem.yml
+++ b/src/main/resources/application-mem.yml
@@ -10,11 +10,11 @@ spring:
         dialect: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: none
-    show-sql: true
+    show-sql: false
 
   h2:
     console:
-      enabled: true
+      enabled: false
 
   datasource:
     url: "jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1"
