--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,10 +2,9 @@ name: Docker publish
 
 on:
   push:
-    # Publish `master` as Docker `latest` image.
-    branches:
-      - master
-      - dev
+    # Publish `v1.2.3` tags as releases.
+    tags:
+      - v*
 
 env:
   IMAGE_NAME: robin_copy
@@ -68,5 +67,5 @@ jobs:
           echo IMAGE_ID=$IMAGE_ID
           echo BRANCH_NAME=$BRANCH_NAME
 
-          docker tag $IMAGE_NAME $IMAGE_ID-$BRANCH_NAME:latest
-          docker push $IMAGE_ID-$BRANCH_NAME:latest
+          docker tag $IMAGE_NAME $IMAGE_ID:$BRANCH_NAME
+          docker push $IMAGE_ID:$BRANCH_NAME
